# kent-beck-tdd-python

./: .gitignore  README.md  money-example.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
src/tdd/: __init__.py  main.py  money-example.md  money.py
tests/: test_main.py  test_money.py
