[metadata]
name=tdd
description = Short project description
author = Connor Keating
version = attr: tdd.__version__
platforms = win32
classifiers = 
    Programming Languages :: Python :: 3
    Programming Languages :: Python :: 3 :: Only
    Programming Languages :: Python :: 3.11

[options]
packages = tdd
# install_requires = 
    # tdd==1.0
python_requires = >=3.11
package_dir = 
    =src

[options.extras_require]
testing =
    pytest
    pytest-cov
    tox

[options.package_data]
package = 
    py.typed
    logging.conf